--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-c++ linguist-detectable=false
-java linguist-detectable=false
-assembly linguist-detectable=false
+*.cpp linguist-detectable=false
+*.java linguist-detectable=false
+*.assembly linguist-detectable=false
