--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 *.cpp linguist-detectable=false
 *.java linguist-detectable=false
 *.assembly linguist-detectable=false
+*.cs linguist-detectable=true
