--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,11 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-*.cpp linguist-detectable=false
 *.java linguist-detectable=false
-*.assembly linguist-detectable=false
 *.cs linguist-detectable=true
+
+/.github export-ignore
+/bin export-ignore
+/tests export-ignore
+.editorconfig export-ignore
+.gitattributes export-ignore
+.gitignore export-ignore
