--- a/AppGallery/AppGallery/AppGallery.csproj
+++ b/AppGallery/AppGallery/AppGallery.csproj
@@ -37,6 +37,9 @@
     <EmbeddedResource Update="XamarinForms\Controles\CaixaControle\Caixa.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="XamarinForms\Controles\Rotulo\Rotulo.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="XamarinForms\Layouts\LayoutAbsoluto\Absoluto.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
